# PixelGame

./: CMakeLists.txt  main.cpp  main.h
data/: testsprites.psd
data/ui/: colors.h
include/: Environment.h  GameEngine.h  GraphicEngine.h  Hitbox.h  UIGraphicEngine.h  main.h
src/: Environment.cpp  GameEngine.cpp  GraphicEngine.cpp  Hitbox.cpp  UIGraphicEngine.cpp  controls.h  main.cpp  main.h
src/graphics/: GraphicEngine.cpp  GraphicEngine.h  constans.h
src/logic/: Environment.cpp  GameEngine.cpp  GameEngine.h  Hitbox.cpp  Hitbox.h  ui_id_list.h
src/logic/environment/: Chunk.cpp  Chunk.h  Environment.cpp  Environment.h  Material.h  TestChunkGenerator.cpp  TestChunkGenerator.h  constans.h
src/logic/environment/chunks/: Chunk.cpp  Chunk.h  ChunkGenerator.h  TestChunkGenerator.cpp  TestChunkGenerator.h
src/logic/environment/static_objects/: StaticObject.cpp  StaticObject.h
src/logic/environment/static_objects/server/: Server.cpp  Server.h
src/stuff/: Rectangle.cpp  Rectangle.h
src/ui/: FunctionalKey.cpp  FunctionalKey.h  UIEngine.cpp  UIEngine.h  UIEventManager.cpp  UIEventManager.h  UIGraphicEngine.cpp  UIGraphicEngine.h  constans.h
src/ui/graphics/: GUIEngine.cpp  GUIEngine.h
src/ui/widgets/: Button.cpp  Button.h  Label.cpp  Label.h  Layout.cpp  Layout.h  TextField.cpp  TextField.h  TextInput.cpp  TextInput.h  Widget.cpp  Widget.h  Window.cpp  Window.h
